添加G1垃圾收集器